external-crates/move/crates/move-compiler/tests/move_check/expansion/pack_no_fields_block_expr.exp
error[E01002]: unexpected token
  ┌─ tests/move_check/expansion/pack_no_fields_block_expr.move:4:21
  │
4 │         let s = S { let x = 0; x };
  │                     ^^^
  │                     │
  │                     Unexpected 'let'
  │                     Expected an identifier

error[E03009]: unbound variable
  ┌─ tests/move_check/expansion/pack_no_fields_block_expr.move:4:32
  │
4 │         let s = S { let x = 0; x };
  │                                ^ Unbound variable 'x'

error[E01002]: unexpected token
  ┌─ tests/move_check/expansion/pack_no_fields_block_expr.move:4:35
  │
4 │         let s = S { let x = 0; x };
  │                                   ^
  │                                   │
  │                                   Unexpected ';'
  │                                   Expected a module member: 'spec', 'use', 'friend', 'const', 'fun', or 'struct'

